--- a/public/index1.html
+++ b/public/index1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>CraftyJS Iso Test 1</title>
-    <script src="node_modules/socket.io/lib/socket.io.js"></script>
+    <script src="../node_modules/socket.io/lib/socket.io.js"></script>
     <script src="lib/crafty.js" type="text/javascript"></script>
     <script src="lib/jquery-1.10.2.min.js" type="text/javascript"></script>
     <script src="src/sprites.js" type="text/javascript"></script>
