--- a/public/index1.html
+++ b/public/index1.html
@@ -2,9 +2,15 @@
 <html>
 <head>
     <title>CraftyJS Iso Test 1</title>
-    <script src="../node_modules/socket.io/lib/socket.io.js"></script>
+    <script src="http://localhost:8880/socket.io/lib/socket.io.js"></script>
     <script src="lib/crafty.js" type="text/javascript"></script>
     <script src="lib/jquery-1.10.2.min.js" type="text/javascript"></script>
+    <script>
+        var socket = io.connect('http://localhost');
+        socket.on('connected', function (data) {
+            console.log(data);
+        });
+    </script>
     <script src="src/sprites.js" type="text/javascript"></script>
     <script src="src/cardsComponents.js" type="text/javascript"></script>
     <script src="src/tweenings.js" type="text/javascript"></script>
@@ -19,12 +25,7 @@
             margin: auto;
         }
     </style>
-    <script>
-        var socket = io.connect('http://localhost', {port: 8080});
-        socket.on('connected', function (data) {
-            console.log(data.data);
-        });
-    </script>
+
 </head>
 <body>
 
